website/versioned_docs/version-4.0.0-rc.1/components/Tab.Item.mdx
---
id: tab_item
title: Tab.Item
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import {} from "react-native-elements";

They are individual item of the parent Tab.
They are clickable and allows users to click and change Tab.
Receives all [Button](https://reactnativeelements.com/docs/button#props) props.

## Props

:::note
Includes all [Button](button#props) props.
:::

<div class='table-responsive'>

| Name                 | Type                                          | Default | Description                                      |
| -------------------- | --------------------------------------------- | ------- | ------------------------------------------------ |
| `active`             | boolean                                       |         | Allows to define if TabItem is active.           |
| `buttonStyle`        | `ViewStyle or (active: boolean) => ViewStyle` |         | Additional button style                          |
| `containerStyle`     | ViewStyle or (active: boolean) => ViewStyle   |         | Additional Styling for button container.         |
| `iconContainerStyle` | ViewStyle or (active: boolean) => ViewStyle   |         | Additional Styling for Icon Component container. |
| `titleStyle`         | TextStyle or (active: boolean) => TextStyle   |         | Additional button title style                    |
| `variant`            | `primary` or `default`                        |         | Define the background Variant.                   |

</div>
